# mimeutil

./: CMakeLists.txt  README.md
mimeutil/: MimeInfo.cpp  MimeInfo.h  MimeParser.cpp  MimeParser.h  MimeWriter.cpp  MimeWriter.h
tests/: mimeparser.cpp
